fix: replace Spring CORS with raw servlet filter for bulletproof CORS handling