@@ -1,19 +1,25 @@
 package com.example.restaurantplatform.config;
 
+import jakarta.servlet.Filter;
+import jakarta.servlet.FilterChain;
+import jakarta.servlet.ServletException;
+import jakarta.servlet.ServletRequest;
+import jakarta.servlet.ServletResponse;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.boot.web.servlet.FilterRegistrationBean;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.CorsConfigurationSource;
+import org.springframework.core.Ordered;
 
+import java.io.IOException;
 import java.util.Arrays;
 import java.util.List;
 
 /**
- * CORS Configuration for the Restaurant Platform API.
- *
- * This configuration allows frontend applications to make requests to the backend.
- * For production, the allowedOrigins should be restricted to specific frontend URLs.
+ * CORS Configuration using a raw Servlet Filter.
+ * This runs BEFORE Spring Security, so preflight OPTIONS requests always get CORS headers.
  */
 @Configuration
 public class CorsConfig {
@@ -22,16 +28,39 @@ public class CorsConfig {
     private String allowedOrigins;
 
     @Bean
-    public CorsConfigurationSource corsConfigurationSource() {
-        return request -> {
-            CorsConfiguration configuration = new CorsConfiguration();
-            configuration.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
-            configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-            configuration.setAllowedHeaders(List.of("*"));
-            configuration.setAllowCredentials(true);
-            configuration.setMaxAge(3600L);
-            return configuration;
-        };
+    public FilterRegistrationBean<Filter> corsFilter() {
+        FilterRegistrationBean<Filter> bean = new FilterRegistrationBean<>();
+        List<String> origins = Arrays.asList(allowedOrigins.split(","));
+
+        bean.setFilter(new Filter() {
+            @Override
+            public void doFilter(ServletRequest req, ServletResponse res, FilterChain chain)
+                    throws IOException, ServletException {
+                HttpServletRequest request = (HttpServletRequest) req;
+                HttpServletResponse response = (HttpServletResponse) res;
+
+                String origin = request.getHeader("Origin");
+                if (origin != null && origins.contains(origin.trim())) {
+                    response.setHeader("Access-Control-Allow-Origin", origin);
+                    response.setHeader("Access-Control-Allow-Methods", "GET, POST, PUT, DELETE, OPTIONS, PATCH");
+                    response.setHeader("Access-Control-Allow-Headers", "*");
+                    response.setHeader("Access-Control-Allow-Credentials", "true");
+                    response.setHeader("Access-Control-Max-Age", "3600");
+                }
+
+                // For preflight OPTIONS requests, return 200 immediately
+                if ("OPTIONS".equalsIgnoreCase(request.getMethod())) {
+                    response.setStatus(HttpServletResponse.SC_OK);
+                    return;
+                }
+
+                chain.doFilter(req, res);
+            }
+        });
+
+        bean.addUrlPatterns("/*");
+        bean.setOrder(Ordered.HIGHEST_PRECEDENCE);
+        return bean;
     }
 }
 
